--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@babel/preset-env": "^7.16.8",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.5.1",
+		"html-webpack-plugin": "^5.5.1",
 		"sass": "^1.57.1",
 		"sass-loader": "^12.4.0",
 		"style-loader": "^3.3.1",
